# suno-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mcp.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/: .cursorrules
docs/: HALLUCINATED_STUDIO_TOOLS.md  PRD.md  README.md  ai-daw-architecture.md  cost-optimization-guide.md  playwright-automation-strategy.md  suno-platform-overview.md  suno-studio-mcp-enhancement-plan.md  suno-studio-overview.md  technical-assessment-2025-09-27.md
prompts/: synthwave-examples.md
src/suno_mcp/: __init__.py  server.py
src/suno_mcp/tools/basic/: __init__.py  tools.py
src/suno_mcp/tools/shared/: __init__.py  exceptions.py  utils.py
tests/local/: test-api.ps1  test-mcp.ps1
tests/unit/: tools.test.js
